tests/errors/dfloat1.f90
program dfloat1
real :: y
print *, dfloat(y)
end program
